# advent-of-code-2020

./: .gitignore  Cargo.toml  README.md  advent2020.cabal  scratch.py  stack.yaml
common/: Advent.hs
execs/: Day00.hs  Day01.hs
inputs/: input19.txt  input20.txt  input21.txt  input23.txt
src/: .Day20.py.swo  Day00.hs  Day01.cpp  Day01.hs  Day01.py  Day01.rs  Day02.cpp  Day02.py  Day02.rs  Day03.py  Day03.rs  Day04.py  Day04.rs  Day05.py  Day05.rs  Day06.py  Day07.py  Day08.py  Day09.py  Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day15.py  Day16.py  Day17.py  Day18.py  Day19.py  Day20.py  Day21.py  Day22.py  Day23.py  Day24.py  Day25.py
