[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Thom van der Woude <tbvanderwoude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "day01"
path = "src/Day01.rs"

[[bin]]
name = "day02"
path = "src/Day02.rs"

[[bin]]
name = "day03"
path = "src/Day03.rs"

[[bin]]
name = "day04"
path = "src/Day04.rs"

[dependencies]
regex = ">=1.4.2"
lazy_static = ">=1.4.0"